--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "micromark": "*",
-    "ms": "^2.1.2"
+    "marky": "^1.0.0",
+    "micromark": "*"
   },
   "devDependencies": {
-    "brfs": "^2.0.2",
-    "browserify": "^16.5.2",
+    "brfs": "^2.0.0",
+    "browserify": "^17.0.0",
     "tinyify": "^3.0.0"
   },
   "scripts": {
-    "build": "browserify example.js -t brfs -p tinyify -o build.min.js"
+    "build": "browserify example.js -t brfs -o build.min.js"
   }
 }
